// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BibTeX Parser should default to "article" for unknown types 1`] = `
Array [
  Object {
    "id": "should_default_to_article",
    "title": "My awesome type",
    "type": "article",
  },
  Object {
    "id": "should_also_be_article",
    "title": " Foobar type ",
    "type": "article",
  },
]
`;

exports[`BibTeX Parser should parse a file without leading or trailing whitespace 1`] = `
Array [
  Object {
    "id": "my_ref_id",
    "note": "Note in quotes",
    "number": "6",
    "title": "Title in braces",
    "type": "book",
  },
]
`;

exports[`BibTeX Parser should parse a simple .bib file 1`] = `
Array [
  Object {
    "author": Array [
      Object {
        "family": "Peltan",
        "given": "Ithan D.",
      },
      Object {
        "family": "Vande Vusse",
        "given": "Lisa K.",
      },
      Object {
        "family": "Maier",
        "given": "Ronald V.",
      },
      Object {
        "family": "Watkins",
        "given": "Timothy R.",
      },
    ],
    "container-title": "Critical Care Medicine",
    "id": "peltan_international_2015",
    "issued": Object {
      "date-parts": Array [
        Array [
          "2015",
          "07",
          "",
        ],
      ],
    },
    "number": "7",
    "page": "1429–1438",
    "title": "An International Normalized Ratio–Based Definition of Acute Traumatic Coagulopathy Is Associated With Mortality, Venous Thromboembolism, and Multiple Organ Failure After Injury:",
    "type": "article",
    "volume": "43",
  },
  Object {
    "author": Array [
      Object {
        "family": "Inaba",
        "given": "Kenji",
      },
      Object {
        "family": "Rizoli",
        "given": "Sandro",
      },
      Object {
        "family": "Veigas",
        "given": "Precilla V.",
      },
      Object {
        "family": "Callum",
        "given": "Jeannie",
      },
      Object {
        "family": "Davenport",
        "given": "Ross",
      },
      Object {
        "family": "Hess",
        "given": "John",
      },
      Object {
        "family": "Maegele",
        "given": "Marc",
      },
    ],
    "container-title": "Journal of Trauma and Acute Care Surgery",
    "id": "inaba_2014_2015",
    "issued": Object {
      "date-parts": Array [
        Array [
          "2015",
          "06",
          "",
        ],
      ],
    },
    "number": "6",
    "page": "1220–1229",
    "title": "2014 Consensus conference on viscoelastic test–based transfusion guidelines for early trauma resuscitation: Report of the panel",
    "type": "article",
    "volume": "78",
  },
]
`;

exports[`BibTeX Parser should parse a valid date regardless of the order of date parts or what is available 1`] = `
Array [
  Object {
    "id": "case_1",
    "issued": Object {
      "date-parts": Array [
        Array [
          "2016",
          "02",
          "",
        ],
      ],
    },
    "type": "article",
  },
  Object {
    "id": "case_2",
    "issued": Object {
      "date-parts": Array [
        Array [
          "2015",
          "03",
          "",
        ],
      ],
    },
    "type": "book",
  },
  Object {
    "id": "case_3",
    "issued": Object {
      "date-parts": Array [
        Array [
          "",
          "11",
          "",
        ],
      ],
    },
    "type": "report",
  },
  Object {
    "id": "case_4",
    "issued": Object {
      "date-parts": Array [
        Array [
          "2017",
          "",
          "",
        ],
      ],
    },
    "type": "thesis",
  },
  Object {
    "id": "case_5",
    "title": "this case has no listed date",
    "type": "thesis",
  },
]
`;

exports[`BibTeX Parser should parse and skip over preamble statements correctly in varying formats 1`] = `
Array [
  Object {
    "id": "case_1",
    "title": "Test book title",
    "type": "book",
  },
]
`;

exports[`BibTeX Parser should parse dicratical commands 1`] = `
Array [
  Object {
    "id": "simple_dicraticals",
    "title": "fõóōb̀ȧr̂",
    "type": "article",
  },
  Object {
    "id": "extended_dicraticals",
    "title": "föo̧o̱ŏǒọo̊őbąr",
    "type": "article",
  },
]
`;

exports[`BibTeX Parser should parse empty files 1`] = `Array []`;

exports[`BibTeX Parser should parse entries without IDs 1`] = `
Array [
  Object {
    "id": "",
    "title": "Test 1",
    "type": "article",
  },
  Object {
    "id": "",
    "title": "Test 2",
    "type": "book",
  },
  Object {
    "id": "",
    "title": "Test 3",
    "type": "thesis",
  },
  Object {
    "id": "",
    "title": "Test 4",
    "type": "article",
  },
  Object {
    "id": "",
    "title": "Test 5",
    "type": "article",
  },
]
`;

exports[`BibTeX Parser should parse files with zero entries 1`] = `Array []`;

exports[`BibTeX Parser should parse known commands and skip unknown commands 1`] = `
Array [
  Object {
    "id": "known_commands",
    "note": "© 2017",
    "title": "ΘΣπ",
    "type": "book",
  },
  Object {
    "id": "skip_unknown_commands",
    "title": "Hello World",
    "type": "article",
  },
  Object {
    "id": "symbol_commands",
    "title": "$%#&_{}",
    "type": "article",
  },
]
`;

exports[`BibTeX Parser should parse minified files 1`] = `
Array [
  Object {
    "author": Array [
      Object {
        "family": "Torre",
        "given": "Joe",
      },
      Object {
        "family": "Verducci",
        "given": "Tom",
      },
    ],
    "id": "with_spaces_single",
    "issued": Object {
      "date-parts": Array [
        Array [
          "2008",
          "",
          "",
        ],
      ],
    },
    "publisher": "Doubleday",
    "title": "The Yankee Years",
    "type": "book",
  },
  Object {
    "editor": Array [
      Object {
        "family": "Correns",
        "given": "Paul",
      },
    ],
    "id": "without_spaces_single",
    "page": "1-11",
    "title": "Die dem Boethius fälschlich zugeschriebene Abhandlung des Dominicus Gundisalvi 'De unitate'",
    "type": "article",
    "volume": "1",
  },
  Object {
    "id": "with_spaces_multiple_1",
    "issued": Object {
      "date-parts": Array [
        Array [
          "2015",
          "",
          "",
        ],
      ],
    },
    "title": "Testing 1",
    "type": "article",
  },
  Object {
    "id": "with_spaces_multiple_2",
    "issued": Object {
      "date-parts": Array [
        Array [
          "2015",
          "",
          "",
        ],
      ],
    },
    "title": "Testing 2",
    "type": "article",
  },
  Object {
    "id": "without_spaces_multiple_1",
    "issued": Object {
      "date-parts": Array [
        Array [
          "2015",
          "",
          "",
        ],
      ],
    },
    "title": "Testing 1",
    "type": "book",
  },
  Object {
    "id": "without_spaces_multiple_2",
    "issued": Object {
      "date-parts": Array [
        Array [
          "2015",
          "",
          "",
        ],
      ],
    },
    "title": "Testing 1",
    "type": "book",
  },
]
`;

exports[`BibTeX Parser should parse names in various formats 1`] = `
Array [
  Object {
    "author": Array [
      Object {
        "dropping-particle": "de la Fontaine du",
        "family": "Bois Joli",
        "given": "Jean",
      },
      Object {
        "family": "Diderik van der Waals",
        "given": "Johannes",
      },
      Object {
        "family": "Smith",
        "given": "John",
      },
    ],
    "id": "case_1",
    "type": "article",
  },
  Object {
    "author": Array [
      Object {
        "dropping-particle": "De la Fontaine du",
        "family": "Bois Joli",
        "given": "Jean",
      },
      Object {
        "family": "Waals",
        "given": "Johannes Diderik",
        "non-dropping-particle": "Van der",
      },
      Object {
        "family": "Smith",
        "given": "John",
      },
    ],
    "id": "case_2",
    "type": "article",
  },
  Object {
    "author": Array [
      Object {
        "dropping-particle": "De la Fontaine du",
        "family": "Bois Joli",
        "given": "Jean",
        "suffix": "Jr.",
      },
      Object {
        "family": "Waals",
        "given": "Johannes Diderik",
        "non-dropping-particle": "Van der",
        "suffix": "III",
      },
      Object {
        "family": "Smith",
        "given": "John",
        "suffix": "IV",
      },
    ],
    "id": "case_3",
    "type": "article",
  },
  Object {
    "author": Array [
      Object {
        "family": "Smith",
        "given": "Frank",
      },
      Object {
        "family": "Research Collaborators",
        "given": "Foobar",
      },
    ],
    "id": "case_4",
    "type": "article",
  },
]
`;

exports[`BibTeX Parser should parse user-defined strings 1`] = `
Array [
  Object {
    "id": "no_spaces_test",
    "title": "AAABBBCCC",
    "type": "article",
  },
  Object {
    "id": "test_concat_whitespace",
    "title": "foo bar baz",
    "type": "book",
  },
  Object {
    "id": "parses_defined_strings",
    "note": "foo bar baz",
    "title": "foo bar baz",
    "type": "article",
  },
  Object {
    "id": "skips_over_unknown_string",
    "title": "Title starts here",
    "type": "book",
  },
  Object {
    "id": "parses_string_above_now_that_its_available",
    "title": "Now this string is available to use!",
    "type": "article",
  },
]
`;
